Created Roulette Table Layout populating SQL script

--- a/RouletteResults.Data/RouletteResults.Data.csproj
+++ b/RouletteResults.Data/RouletteResults.Data.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="SQLite" Version="3.13.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Sql\" />
+  </ItemGroup>
+
 </Project>
