Added RouletteResults.Data project reference

--- a/RouletteCasinoGame/RouletteResults/RouletteResults.csproj
+++ b/RouletteCasinoGame/RouletteResults/RouletteResults.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Unity.Container" Version="5.11.11" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RouletteResults.Data\RouletteResults.Data.csproj" />
+  </ItemGroup>
+
 </Project>
