SQLite DB file's CopyToOutputDirectory prop set to 'Always'

--- a/RouletteCasinoGame/RouletteResults.Data/RouletteResults.Data.csproj
+++ b/RouletteCasinoGame/RouletteResults.Data/RouletteResults.Data.csproj
@@ -21,4 +21,10 @@
     <Folder Include="Sql\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Sql\RouletteResultsData.db">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
